--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.tsx"
   },
   "dependencies": {
+    "@elysiajs/html": "^1.0.2",
+    "@mysten/sui.js": "^0.51.0",
     "elysia": "latest"
   },
   "devDependencies": {
